--- a/UserMgtApp/WebContent/WEB-INF/web.xml
+++ b/UserMgtApp/WebContent/WEB-INF/web.xml
@@ -4,4 +4,56 @@
   <welcome-file-list>
     <welcome-file>home.html</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+    <servlet-name>loginServlet</servlet-name>
+    <servlet-class>com.servlet.user.LoginServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>loginServlet</servlet-name>
+  	<url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  
+   <servlet>
+    <servlet-name>createUser</servlet-name>
+    <servlet-class>com.servlet.user.CreateUserServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>createUser</servlet-name>
+  	<url-pattern>/addUser</url-pattern>
+  </servlet-mapping>
+  
+   <servlet>
+    <servlet-name>updateUser</servlet-name>
+    <servlet-class>com.servlet.user.UpdateUserServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>updateUser</servlet-name>
+  	<url-pattern>/updateUser</url-pattern>
+  </servlet-mapping>
+  
+   <servlet>
+    <servlet-name>deleteUser</servlet-name>
+    <servlet-class>com.servlet.user.DeleteUserServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>deleteUser</servlet-name>
+  	<url-pattern>/deleteUser</url-pattern>
+  </servlet-mapping>
+  
+   <servlet>
+    <servlet-name>getUser</servlet-name>
+    <servlet-class>com.servlet.user.GetUserServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>getUser</servlet-name>
+  	<url-pattern>/getUser</url-pattern>
+  </servlet-mapping>
+  
+  
 </web-app>
